id attribute added to h1 tag

--- a/WebContent/001hellojs.html
+++ b/WebContent/001hellojs.html
@@ -5,7 +5,7 @@
     <title>JS Basics</title>
 </head>
 <body>
-    <h1>Hello World of JS</h1>
+    <h1 id="h1">Hello World of JS</h1>
 
     <script src="js/app001.js"></script>
 </body>
