--- a/WebContent/029forinforofloops.html
+++ b/WebContent/029forinforofloops.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Destructing</title>
+    <title>For In &amp; For Out</title>
 </head>
 <body>
 <script src="js/app029.js"></script>
