--- a/WebContent/028spreadoperator.html
+++ b/WebContent/028spreadoperator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Destructing</title>
+    <title>Spread Operator (...)</title>
 </head>
 <body>
 <script src="js/app028.js"></script>
